--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                     <img src="./assets/images/property-2.jpg" alt="Modern Houses" class="w-100">
                   </a>
 
-                  <div class="card-badge orange">For Sales</div>
+                  <div class="card-badge orange">For Rent</div>
 
                   <div class="banner-actions">
 
